Save current work before checking out previous commit

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -2,3 +2,4 @@
 # .env
 
 VITE_CSC_API_KEY=a2VmOVRkaGtvcDJwYUlqV1FEa3ZPeFFRcEdxcWdtcUJqdENQUTdYSw==
+VITE_PROPERTY_ADDRESS=0xa440Cf88D269095f402E38DB94E2F76aCF363CDA
