--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,5 +1,2 @@
-
-# .env
-
-VITE_CSC_API_KEY=a2VmOVRkaGtvcDJwYUlqV1FEa3ZPeFFRcEdxcWdtcUJqdENQUTdYSw==
-VITE_PROPERTY_ADDRESS=0xa440Cf88D269095f402E38DB94E2F76aCF363CDA
+VITE_PROPERTY_TITLE_ADDRESS="0xdBfb493632c6fbA0CF04EE51B78695DcD576d189"
+VITE_MARKETPLACE_ADDRESS="0xB113aBC9394c83A4cfE131ab69746eF8A7639f3F"
