--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
+    "ether": "^0.0.9",
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
