--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "dotenv": "^17.2.2",
+    "ether": "^0.0.9",
     "ethers": "^6.15.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
